--- a/User Card/index.html
+++ b/User Card/index.html
@@ -20,12 +20,12 @@
             <h3>Seattle</h3>
         </div>
         <div class="content">
-            <p>Engineer Problem Solver</p>
-            <p>Master of shadows and the internet!</p>
+            <p><strong>Problem Solver</p></strong>
+            <p><strong>Master of shadows and the internet!</strong></p>
         </div>
-        <div>
-            <img class="small" src="gear.png" alt="Gear">
-            <a href="">edit profile</a>
+        <div class="bottom"></div>
+            <img class="small align-middle" src="gear.png" alt="Gear">
+            <a class="align-middle" href="">edit profile</a>
         </div>
     </div>
 </body>
